--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,19 @@
   <packaging>maven-plugin</packaging>
 
   <name>compressor-maven-plugin Maven Plugin</name>
+  <description>This Maven plugin allows to perform file compression tasks as part of a Maven build sequence.</description>
+  <url>https://github.com/S1artie/compressor-maven-plugin</url>
 
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://opensource.org/licenses/MIT</url>
+    </license>
+  </licenses>
+  
+  <scm>
+    <url>https://github.com/S1artie/compressor-maven-plugin</url>
+  </scm>
 
   <prerequisites>
     <maven>${maven.version}</maven>
