--- a/src/test/resources/projects/compressor-tests/bzip2-medium-test/pom.xml
+++ b/src/test/resources/projects/compressor-tests/bzip2-medium-test/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.firehead.compressor</groupId>
+  <groupId>de.firehead</groupId>
   <artifactId>compressor-maven-plugin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -13,7 +13,7 @@
   <build>
     <plugins>
       <plugin>
-		<groupId>de.firehead.compressor</groupId>
+		<groupId>de.firehead</groupId>
         <artifactId>compressor-maven-plugin</artifactId>
         <version>${project.version}</version>
         <configuration>
