--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,20 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean install -Prun-its --file pom.xml
 
-    - name: Set up Apache Maven Central
+    - name: Set up Maven Central
       uses: actions/setup-java@v3
       with: # running setup-java again overwrites the settings.xml
         distribution: 'temurin'
         java-version: '11'
-        server-id: maven # Value of the distributionManagement/repository/id field of the pom.xml
-        server-username: MAVEN_USERNAME # env variable for username in deploy
-        server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
+        server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
+        server-username: OSSRH_USERNAME # env variable for username in deploy
+        server-password: OSSRH_TOKEN # env variable for token in deploy
         gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
         gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
-    - name: Publish to Apache Maven Central
+    - name: Publish to Maven Central
       run: mvn deploy
       env:
-        MAVEN_USERNAME: maven_username123
-        MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_CENTRAL_TOKEN: ${{ secrets.OSSRH_TOKEN }}
         MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
