updated dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,4 @@ updates:
     ignore:
       - dependency-name: "maven.version"
       - dependency-name: "org.apache.maven.plugins:maven-plugin-plugin"
+      - dependency-name: "org.apache.maven.plugin-tools:maven-plugin-annotations"
