--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,3 +41,5 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B clean install -Prun-its --file pom.xml
+      env:
+        MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
