--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,9 @@ jobs:
         server-username: OSSRH_USERNAME # env variable for username in deploy
         server-password: OSSRH_TOKEN # env variable for token in deploy
         gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
-        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase    
+        gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
+
+    - run: cat ~/.m2/settings.xml
 
     - name: Build with Maven
       run: mvn -B clean install -Prun-its --file pom.xml
