--- a/pom.xml
+++ b/pom.xml
@@ -146,9 +146,8 @@
           <version>3.6.0</version>
         </plugin>
         <plugin>
-          <groupId>org.simplify4u.plugins</groupId>
-          <artifactId>sign-maven-plugin</artifactId>
-          <version>1.0.1</version>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.sonatype.plugins</groupId>
@@ -260,15 +259,16 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.simplify4u.plugins</groupId>
-        <artifactId>sign-maven-plugin</artifactId>
-        <version>1.0.1</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
         <executions>
-            <execution>
-                <goals>
-                    <goal>sign</goal>
-                </goals>
-            </execution>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
         </executions>
       </plugin>
 
