--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
     <url>https://github.com/S1artie/compressor-maven-plugin</url>
   </scm>
 
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <prerequisites>
     <maven>${maven.version}</maven>
   </prerequisites>
@@ -319,7 +326,7 @@
           <plugin>
             <groupId>org.sonatype.plugins</groupId>
             <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.7</version>
+            <version>1.6.13</version>
             <extensions>true</extensions>
             <configuration>
               <serverId>ossrh</serverId>
