Updated dependabot excludes
Maven updates should be excluded entirely, since we must keep
compatibility with older Maven versions which severely limits our
ability to update anything directly Maven-related

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,5 @@ updates:
       - dependency-name: "maven.version"
       - dependency-name: "org.apache.maven.plugins:maven-deploy-plugin"
       - dependency-name: "org.apache.maven.plugins:maven-install-plugin"
+      - dependency-name: "org.apache.maven:maven-core"
+      - dependency-name: "org.apache.maven:maven-compat"
