Configured dependabot to ignore major update to plexus-utils
The major update is problematic with regard to XML classes, and also
mostly geared towards Maven 4 and thus not relevant here.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,5 @@ updates:
       - dependency-name: "org.apache.maven.plugins:maven-install-plugin"
       - dependency-name: "org.apache.maven:maven-core"
       - dependency-name: "org.apache.maven:maven-compat"
+      - dependency-name: "org.codehaus.plexus:plexus-utils"
+        update-types: ["version-update:semver-major"]
